[package]
name = "rusty_socks_proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
bytes = "1"
russh = "0.40.0"
russh-keys = "0.40.0"
async-trait = "0.1"
log = "0.4"
env_logger = "0.11"
futures = "0.3"
socket2 = "0.5"

[[bin]]
name = "rusty_socks_proxy"
path = "main.rs"
